app/assets/stylesheets/global.css.scss
.spotify {
  color: $spotify-green;
}

.pandora {
  color: $pandora-blue;
}

body {
  background-color: $background-color;
}

a {
  cursor: pointer;
}

a:hover {
  color: $pandora-blue;
  text-decoration: none;
}

body, a, input {
  font-family: 'Noto Sans', sans-serif !important;
  color: $text-color;
}

header {
  padding: 20px 0;

  img {
    display: block;
    float: right;
    margin-right: -230px;
  }
}

nav, section {
  padding: 10px 0px;
}

nav {
  ul {
    float: right;
    margin: 0 $side-padding 0 0;
  }

  li {
    padding-bottom: 15px;

    span {
      color: $divider-color;
    }
  }

  .active {
    color: $spotify-green;
  }
}

.error {
  color: $error-red;
}

.container {
  min-width: $min-container-width;
}

.pandify section {
  border-left: 1px solid transparent; // So that the section:before gradient sits where the border-left would be.
  min-height: 120px
}

.pandify section:before {
  content: "";
  position: absolute;
  top: 0%;
  bottom: 0%;
  left: -1px;
  width: 1px;
  background-image: -webkit-linear-gradient(top, rgba(227,224,216,0) 0, $divider-color 20%, $divider-color 80%, rgba(227,224,216,0) 100%);
  background-image: -moz-linear-gradient(top, rgba(227,224,216,0) 0, $divider-color 20%, $divider-color 80%, rgba(227,224,216,0) 100%);
  background-image: -ms-linear-gradient(top, rgba(227,224,216,0) 0, $divider-color 20%, $divider-color 80%, rgba(227,224,216,0) 100%);
  background-image: -o-linear-gradient(top, rgba(227,224,216,0) 0, $divider-color 20%, $divider-color 80%, rgba(227,224,216,0) 100%);
  background-image: linear-gradient(top, rgba(227,224,216,0) 0, $divider-color 20%, $divider-color 80%, rgba(227,224,216,0) 100%);
}

.pandify section > div {
  margin-left: $side-padding;
}

.pandify button {
  background-color: $pandora-blue;
  color: $background-color;
  border: none;
}

.pandify button:hover {
  background-color: $spotify-green;
}

.pandify {
  input[type=text], input[type=email], select, #configure-menu .selectize-control {
    width: 350px;
  }

  ::-webkit-input-placeholder { color: $placeholder-color; } // WebKit browsers
  :-moz-placeholder { color: $placeholder-color; opacity:  1; } // Mozilla Firefox 4 to 18
  ::-moz-placeholder { color: $placeholder-color; opacity:  1; } // Mozilla Firefox 19+
  :-ms-input-placeholder { color: $placeholder-color; } // Internet Explorer 10+

  form {
    margin-top: 15px;
  }

  .form-group, button {
    margin-left: 20px;
  }
}

#credit {
  position: absolute;
  top: 10px;
  right: 15px;
  color: $divider-color;
  font-size: 0.8em;

  a {
    color: $divider-color;
    text-decoration: underline;
  }

  a:hover {
    text-decoration: none;
  }
}

